--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,3 +1,5 @@
+
+
 /*!
 
  =========================================================
@@ -5430,13 +5432,13 @@ Created using IcoMoon - icomoon.io
 .page-header[filter-color="orange"] {
     background: rgba(44, 44, 44, 0.2);
     /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
+    background: -webkit-linear-gradient(90deg, rgba(44, 44, 44, 0.2), #8d54a2);
     /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
+    background: -o-linear-gradient(90deg, rgba(44, 44, 44, 0.2), #8d54a2);
     /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
+    background: -moz-linear-gradient(90deg, rgba(44, 44, 44, 0.2), #8d54a2);
     /* For Firefox 3.6 to 15 */
-    background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
+    background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), #8d54a2);
     /* Standard syntax */
 }
 
@@ -7378,5 +7380,3 @@ Created using IcoMoon - icomoon.io
         transform: translateY(-50%);
     }
 }
-
-
