--- a/assets/css/BerbagiBarang.css
+++ b/assets/css/BerbagiBarang.css
@@ -4998,7 +4998,7 @@ Created using IcoMoon - icomoon.io
 .carousel .now-ui-icons {
     font-size: 2em;
 }
- 
+
 .card {
     border: 0;
     border-radius: 0.1875rem;
@@ -5147,7 +5147,7 @@ Created using IcoMoon - icomoon.io
 
 .footer ul li a:hover {
     text-decoration: none;
-} 
+}
 
 .footer .copyright {
     font-size: 0.8571em;
@@ -5894,7 +5894,7 @@ Created using IcoMoon - icomoon.io
 
 [data-background-color] .form-control {
     border-color: rgba(255, 255, 255, 0.5);
-    color: #FFFFFF;
+    color: #e827b3;
 }
 
 [data-background-color] .form-control:focus {
