--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -77,7 +77,7 @@
     cursor: pointer;
     display: inline-block !important;
     height: 100%;
-    color: #fff;
+    color: #8d54a2;
     padding: 6px 12px;
     font-size: 11px;
     text-indent: -5px;
@@ -116,7 +116,7 @@
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-orange,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-orange {
     background: #FFB236;
-    color: #fff;
+    color: #8d54a2;
 }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-red,
@@ -134,7 +134,7 @@
     text-align: center;
     z-index: 100;
     color: #333333;
-    background: #ffffff;
+    background: #8d54a2;s
     width: 22px !important;
     height: 22px !important;
     margin: 0px -11px;
@@ -5090,11 +5090,14 @@ Created using IcoMoon - icomoon.io
 }
 
 .footer {
-    padding: 24px 0;
+  background-color: #8d54a2;
+  padding: 24px 0;
+  position: relative;
+  margin: 0px auto;
 }
 
 .footer.footer-default {
-    background-color: #f2f2f2;
+    background-color: #8d54a2;
 }
 
 .footer nav {
